--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 </head>
 <body>
 
+  <!--Navbar-->
+
   <header>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -56,6 +58,9 @@
             
             </li>
             <li class="nav-item">
+
+
+
             </li>
           </ul>
         </div>
@@ -63,10 +68,62 @@
     </nav>
 
   </header>
-  
+
+  <!--Aside e Main-->
+
   <div id="container" class="d-flex">
 
+    <!--Barra laterale-->
+
     <aside>
+      
+      <section id="folders">
+        <div class="container">
+          <div class="row">
+            <div class="col-4">
+
+              <ul>
+                <li><i class="fa-solid fa-house"></i></li>
+                <li><i class="fa-solid fa-chart-simple"></i></li>
+                <li><i class="fa-solid fa-signal"></i></li>
+              </ul>
+
+            </div>
+
+            <div class="col-8 visible-lg" id="text">
+
+              <ul>
+                <li>Home</li>
+                <li>Stats</li>
+                <li>Signal</li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="settings">
+        <div class="container">
+          <div class="row">
+            <div class="col-4">
+
+              <ul>
+                <li><i class="fa-solid fa-gear"></i></li>
+              </ul>
+
+            </div>
+
+            <div class="col-8 visible-lg" id="text">
+
+              <ul>
+                <li>Admin</li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+      </section>
 
     </aside>
   
