Added section in main and added offcavans

--- a/index.html
+++ b/index.html
@@ -126,8 +126,44 @@
       </section>
 
     </aside>
+
+    <!--tabelle con info-->
   
     <main>
+
+      <section id="students">
+        <div class="container">
+          <div class="row">
+            <div class="col-6"> 
+              <h3>boolean</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur</p>
+            </div>
+
+            <div class="col-3">
+              <p>studenti online</p>
+              <h3>125</h3>
+            </div>
+
+            <div class="col-3">
+              <p>nuovo studenete</p>
+
+              <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">+</button>
+
+               <div class="offcanvas offcanvas-end m-60%" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+                  <div class="offcanvas-header">
+                     <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
+                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                  </div>
+                  <div class="offcanvas-body"> 
+                      <p>Try scrolling the rest of the page to see this option in action.</p>
+                  </div>
+               </div>
+
+
+            </div>
+          </div>
+        </div>s
+      </section>
   
     </main>
 
