correction section in main

--- a/index.html
+++ b/index.html
@@ -133,23 +133,23 @@
 
       <section id="students">
         <div class="container">
-          <div class="row">
+          <div class="row d-flex justify-content-between">
             <div class="col-6"> 
-              <h3>boolean</h3>
+              <h3>Boolean</h3>
               <p>Lorem ipsum, dolor sit amet consectetur</p>
             </div>
 
             <div class="col-3">
-              <p>studenti online</p>
+              <p>Studenti online negli ultimi 30 minuti</p>
               <h3>125</h3>
             </div>
 
-            <div class="col-3">
-              <p>nuovo studenete</p>
+            <div class="col-3 d-flex align-items-center">
+              <p class="pe-3">Nuovo Studenete</p>
 
               <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">+</button>
 
-               <div class="offcanvas offcanvas-end m-60%" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+               <div class="offcanvas offcanvas-end offcanvas-width" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
                   <div class="offcanvas-header">
                      <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -162,7 +162,7 @@
 
             </div>
           </div>
-        </div>s
+        </div>
       </section>
   
     </main>
